halfway in using the wikidata.explore.query package for the workflow